--- a/tema 2/reto 1/agenciaViajes.css
+++ b/tema 2/reto 1/agenciaViajes.css
@@ -33,9 +33,8 @@ header {
   align-items: center;
   width: 100%;
   background-color: royalblue;
-  padding: 10px;
   text-align: center;
-  padding: 40px;
+  padding: 20px;
   margin-top: 20px;
   position: sticky;
   top: 0;
@@ -307,4 +306,21 @@ nav ul li a:hover {
 
 #reservas form button:hover {
   background-color: royalblue;
+}
+
+.reservasHechas {
+  width: 50%;
+  max-width: 800px;
+  background-color: #999999;
+  padding: 20px;
+  border-radius: 10px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  gap: 10px;
+  margin-bottom: 40px;
+}
+
+.reservasHechas p {
+  text-align: center;
+  font-size: 2rem;
+  text-transform: uppercase;
 }
